--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Bella Onojie</title>
   </head>
   <body>
@@ -18,24 +23,25 @@
     </header>
     <main>
       <section class="header-section">
-        <div class="row bg-image-container g-0 justify-content-md-center">
-          <div class="col-12">
-            <h4 class="">Food app</h4>
-            <h1 class="">
+        <div class="row g-0">
+          <div class="col-12 bg-image-container">
+            <h1 class="text-heading">Food app</h1>
+            <h2 class="text-sub-heading">
               Why stay hungry when you can order from Bella Onojie
-            </h1>
-            <h3 class="">Download the bella onojie's food app now on</h3>
+            </h2>
+            <h3 class="download-info-text">
+              Download the bella onojie's food app now on
+            </h3>
+            <div class="buttons-container">
+              <a href="#">
+                <button class="btn-rounded main-btn">Playstore</button>
+              </a>
+              <a href="#">
+                <button class="btn-rounded secondary-btn">App store</button>
+              </a>
+            </div>
           </div>
-          <!-- TODO REWRITE TO FLEX DIRECTION COLUMN\ROW MEDIA -->
-          <div class="col-12 buttons-container col-md-auto">
-            <a href="#">
-              <button class="btn-rounded main-btn">Playstore</button>
-            </a>
-            <a href="#">
-              <button class="btn-rounded secondary-btn">App store</button>
-            </a>
-          </div>
-          <div class="col-12 phones-container">
+          <div class="col-12 col-md-2 offset-md-3 phones-container">
             <div class="left-phone">
               <picture>
                 <source
@@ -64,41 +70,7 @@
         </div>
       </section>
       <hr />
-      <section class="second-section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nesciunt
-        itaque similique! Ipsam perferendis expedita culpa delectus eos rerum
-        quos illum sint molestiae quidem animi nulla nostrum neque quibusdam,
-        mollitia corrupti excepturi facere, laborum quia blanditiis, odit
-        voluptatem fugit fuga tempora? Modi reiciendis inventore doloribus
-        dignissimos maiores consequuntur perspiciatis, quas ea aliquam,
-        similique a iure veritatis corrupti blanditiis explicabo rerum
-        distinctio deserunt perferendis eius laudantium officiis magnam? Porro
-        incidunt accusantium at quos ipsum autem a quaerat voluptates
-        voluptatum! Adipisci in itaque amet esse laboriosam saepe, consequatur
-        dignissimos similique, voluptates ipsa labore aliquid facilis placeat
-        sed sint quod? Ut, ipsum corporis labore quidem a, pariatur obcaecati
-        facere provident est quos molestias temporibus rem iure assumenda eaque
-        aperiam veritatis quod asperiores expedita ab atque adipisci incidunt!
-        Aliquam officiis soluta dignissimos sed qui vero? Sequi saepe ea
-        molestiae consequuntur voluptas modi maxime facere laborum animi
-        necessitatibus est id, sit suscipit! Est voluptates quaerat dolore
-        similique atque magni? Amet vero dignissimos voluptates ad praesentium
-        fuga possimus porro atque nostrum. Quaerat a excepturi voluptates. Non
-        corporis dolorum vel minus eos ab ipsa quibusdam ut fugit, fuga, odit
-        tenetur cum earum harum voluptates voluptatem, reiciendis perferendis
-        optio beatae. Illum at unde voluptas dolores qui suscipit atque dicta
-        ratione fugit vero provident nam nobis, in consequatur vitae quas sed,
-        aliquid consequuntur perspiciatis eum mollitia. Praesentium, fugiat esse
-        alias cumque blanditiis dolor minima eaque voluptas. Nisi laudantium hic
-        totam aut perspiciatis assumenda accusantium nulla distinctio ea
-        molestias quam voluptates asperiores nihil, alias tempore veritatis.
-        Voluptatibus, cumque praesentium deserunt laboriosam perferendis iusto
-        illo quas non dolores vitae a eius possimus, sapiente, eum neque itaque
-        quae enim ex facilis nam similique laudantium consequatur quidem.
-        Exercitationem pariatur iusto aut, labore tempora minus consectetur quae
-        ducimus, animi numquam at, maiores consequuntur quasi illum ipsum odit.
-        Dolores, commodi nobis. At doloribus laborum voluptates!
-      </section>
+      <!-- <section class="second-section"></section> -->
     </main>
   </body>
 </html>
