--- a/index.html
+++ b/index.html
@@ -69,8 +69,46 @@
           </div>
         </div>
       </section>
-      <hr />
-      <!-- <section class="second-section"></section> -->
+      <hr class="horizontal-break" />
+      <h1 class="ta-center iaa-header">How the app works</h1>
+      <section class="info-section">
+        <div class="info-about-app ">
+          <div class="iaa-account ta-center iaa-info-container">
+            <h1 class="iaa-heading">Create an account</h1>
+            <h2 class="iaa-sub-heading">
+              Create/login to an existing account to get started
+            </h2>
+            <h3 class="iaa-account-info">
+              An account is created with your email and a desired password
+            </h3>
+          </div>
+          <div class="iaa-image-container">
+            <img
+              class="iaa-image"
+              src="./assets/images/iaaloginphone.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="info-about-app shop">
+          <div class="iaa-account ta-center iaa-info-container">
+            <h1 class="iaa-heading">Explore varieties</h1>
+            <h2 class="iaa-sub-heading">
+              Shop for your favorites meal as e dey hot.
+            </h2>
+            <h3 class="iaa-account-info">
+              Shop for your favorite meals or drinks and enjoy while doing it.
+            </h3>
+          </div>
+          <div class="iaa-image-container">
+            <img
+              class="iaa-image"
+              src="./assets/images/iaafoodmenu.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
