--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
           </div>
         </div>
       </section>
+      <section class="footer-section ta-center">
+        <div class="fs-text">
+          <h1 class="fs-heading">Download the app now.</h1>
+          <h2 class="fs-sub-heading">Most calendars are designed for teams.</h2>
+        </div>
+        <div class="fs-buttons">
+          <a href="#"> <button class="fs-btn fs-main-btn">Buy now</button></a>
+          <a href="#">
+            <button class="fs-btn fs-secondary-btn">Try for free</button></a
+          >
+        </div>
+      </section>
     </main>
   </body>
 </html>
