--- a/index.html
+++ b/index.html
@@ -122,5 +122,22 @@
         </div>
       </section>
     </main>
+    <footer class="page-footer">
+      <div class="footer-logo-container">
+        <img src="/assets/images/left.png" alt="">
+      </div>
+      <div class="links">
+        <a href="#" class="img-link">
+          <img src="/assets/images/twitter.png" alt="twitter" />
+        </a>
+        <a href="#" class="img-link">
+          <img src="/assets/images/facebook.png" alt="facebook" />
+        </a>
+        <a href="#" class="img-link">
+          <img src="/assets/images/linkedin.png" alt="linkedin" />
+        </a>
+      </div>
+      <h3 class="copyright">Copyright 2020 Bella Onojie.com</h3>
+    </footer>
   </body>
 </html>
