--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-2 offset-md-3 phones-container">
+          <div class="col-12 col-md-2 offset-md-2 offset-lg-4 phones-container">
             <div class="left-phone">
               <picture>
                 <source
@@ -72,7 +72,7 @@
       <hr class="horizontal-break" />
       <h1 class="ta-center iaa-header">How the app works</h1>
       <section class="info-section">
-        <div class="info-about-app ">
+        <div class="info-about-app">
           <div class="iaa-account ta-center iaa-info-container">
             <h1 class="iaa-heading">Create an account</h1>
             <h2 class="iaa-sub-heading">
