--- a/index.html
+++ b/index.html
@@ -41,31 +41,8 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-2 offset-md-2 offset-lg-4 phones-container">
-            <div class="left-phone">
-              <picture>
-                <source
-                  srcset="assets/images/leftp_fs.png"
-                  media="(min-width: 576px)"
-                />
-                <img
-                  src="assets/images/leftp.png"
-                  alt=""
-                  class="img left-phone-img"
-                />
-              </picture>
-              <picture>
-                <source
-                  srcset="assets/images/rightp_fs.png"
-                  media="(min-width: 576px)"
-                />
-                <img
-                  class="img right-phone-img"
-                  src="assets/images/rightp.png"
-                  alt=""
-                />
-              </picture>
-            </div>
+          <div class="col-12 col-md-2 phones-container">
+            <img class="img-phones" src="./assets/images/phones.png" alt="" />
           </div>
         </div>
       </section>
