--- a/index.html
+++ b/index.html
@@ -15,29 +15,36 @@
     <header class="page-header">
       <a href="#" class="link">
         <div class="image-wrapper">
-          <img class="image" src="./assets/images/left.png" alt="logo" /></div
-      ></a>
+          <img class="image" src="./assets/images/left.png" alt="logo" />
+        </div>
+      </a>
       <a href="#" class="link">
-        <img class="image" src="./assets/images/right.png" alt="burger button"
-      /></a>
+        <img
+          class="image"
+          src="./assets/images/right.png"
+          alt="burger button"
+        />
+      </a>
     </header>
     <main>
       <section class="header-section">
         <div class="row g-0">
           <div class="col-12 bg-image-container">
-            <h1 class="text-heading">Food app</h1>
-            <h2 class="text-sub-heading">
+            <h1 class="text-heading overflow">Food app</h1>
+            <h2 class="text-sub-heading multiline-overflow">
               Why stay hungry when you can order from Bella Onojie
             </h2>
-            <h3 class="download-info-text">
+            <h3 class="download-info-text multiline-overflow">
               Download the bella onojie's food app now on
             </h3>
             <div class="buttons-container">
               <a href="#">
-                <button class="btn-rounded main-btn">Playstore</button>
+                <button class="btn-rounded main-btn overflow">Playstore</button>
               </a>
               <a href="#">
-                <button class="btn-rounded secondary-btn">App store</button>
+                <button class="btn-rounded secondary-btn overflow">
+                  App store
+                </button>
               </a>
             </div>
           </div>
@@ -47,15 +54,15 @@
         </div>
       </section>
       <hr class="horizontal-break" />
-      <h1 class="ta-center iaa-header">How the app works</h1>
+      <h1 class="ta-center iaa-header overflow">How the app works</h1>
       <section class="info-section">
         <div class="info-about-app">
-          <div class="iaa-account ta-center iaa-info-container">
-            <h1 class="iaa-heading">Create an account</h1>
-            <h2 class="iaa-sub-heading">
+          <div class="iaa-account iaa-info-container">
+            <h1 class="iaa-heading overflow ta-center">Create an account</h1>
+            <h2 class="iaa-sub-heading multiline-overflow ta-center">
               Create/login to an existing account to get started
             </h2>
-            <h3 class="iaa-account-info">
+            <h3 class="iaa-account-info multiline-overflow ta-center">
               An account is created with your email and a desired password
             </h3>
           </div>
@@ -68,12 +75,12 @@
           </div>
         </div>
         <div class="info-about-app shop">
-          <div class="iaa-account ta-center iaa-info-container">
-            <h1 class="iaa-heading">Explore varieties</h1>
-            <h2 class="iaa-sub-heading">
+          <div class="iaa-account iaa-info-container">
+            <h1 class="iaa-heading overflow ta-center">Explore varieties</h1>
+            <h2 class="iaa-sub-heading multiline-overflow ta-center">
               Shop for your favorites meal as e dey hot.
             </h2>
-            <h3 class="iaa-account-info">
+            <h3 class="iaa-account-info multiline-overflow ta-center">
               Shop for your favorite meals or drinks and enjoy while doing it.
             </h3>
           </div>
@@ -88,20 +95,26 @@
       </section>
       <section class="footer-section ta-center">
         <div class="fs-text">
-          <h1 class="fs-heading">Download the app now.</h1>
-          <h2 class="fs-sub-heading">Most calendars are designed for teams.</h2>
+          <h1 class="fs-heading multiline-overflow">Download the app now.</h1>
+          <h2 class="fs-sub-heading multiline-overflow">
+            Most calendars are designed for teams.
+          </h2>
         </div>
         <div class="fs-buttons">
-          <a href="#"> <button class="fs-btn fs-main-btn">Buy now</button></a>
           <a href="#">
-            <button class="fs-btn fs-secondary-btn">Try for free</button></a
+            <button class="fs-btn fs-main-btn overflow">Buy now</button></a
+          >
+          <a href="#">
+            <button class="fs-btn fs-secondary-btn overflow">
+              Try for free
+            </button></a
           >
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="footer-logo-container">
-        <img src="/assets/images/left.png" alt="">
+        <img src="/assets/images/left.png" alt="" />
       </div>
       <div class="links">
         <a href="#" class="img-link">
@@ -114,7 +127,7 @@
           <img src="/assets/images/linkedin.png" alt="linkedin" />
         </a>
       </div>
-      <h3 class="copyright">Copyright 2020 Bella Onojie.com</h3>
+      <h3 class="copyright overflow">Copyright 2020 Bella Onojie.com</h3>
     </footer>
   </body>
 </html>
