--- a/index.html
+++ b/index.html
@@ -23,50 +23,27 @@
     </header>
     <main>
       <section class="header-section">
-        <div class="row g-0">
-          <div class="col-12 bg-image-container">
-            <h1 class="text-heading">Food app</h1>
-            <h2 class="text-sub-heading">
-              Why stay hungry when you can order from Bella Onojie
-            </h2>
-            <h3 class="download-info-text">
-              Download the bella onojie's food app now on
-            </h3>
-            <div class="buttons-container">
-              <a href="#">
-                <button class="btn-rounded main-btn">Playstore</button>
-              </a>
-              <a href="#">
-                <button class="btn-rounded secondary-btn">App store</button>
-              </a>
-            </div>
+        <div class="bg-image-container">
+          <h1 class="text-heading overflow">Food app</h1>
+          <h2 class="text-sub-heading multiline-overflow">
+            Why stay hungry when you can order from Bella Onojie
+          </h2>
+          <h3 class="download-info-text multiline-overflow">
+            Download the bella onojie's food app now on
+          </h3>
+          <div class="buttons-container">
+            <a href="#">
+              <button class="btn-rounded main-btn overflow">Playstore</button>
+            </a>
+            <a href="#">
+              <button class="btn-rounded secondary-btn overflow">
+                App store
+              </button>
+            </a>
           </div>
-          <div class="col-12 col-md-2 offset-md-2 offset-lg-4 phones-container">
-            <div class="left-phone">
-              <picture>
-                <source
-                  srcset="assets/images/leftp_fs.png"
-                  media="(min-width: 576px)"
-                />
-                <img
-                  src="assets/images/leftp.png"
-                  alt=""
-                  class="img left-phone-img"
-                />
-              </picture>
-              <picture>
-                <source
-                  srcset="assets/images/rightp_fs.png"
-                  media="(min-width: 576px)"
-                />
-                <img
-                  class="img right-phone-img"
-                  src="assets/images/rightp.png"
-                  alt=""
-                />
-              </picture>
-            </div>
-          </div>
+        </div>
+        <div class="phones-container">
+          <img class="img-phones" src="./assets/images/phones.png" alt="" />
         </div>
       </section>
       <hr class="horizontal-break" />
@@ -124,7 +101,7 @@
     </main>
     <footer class="page-footer">
       <div class="footer-logo-container">
-        <img src="/assets/images/left.png" alt="">
+        <img src="/assets/images/left.png" alt="" />
       </div>
       <div class="links">
         <a href="#" class="img-link">
