--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <title>Bella Onojie</title>
   </head>
   <body>
-    <header class="page-header">
-      <a href="#" class="link">
+    <header class="page-header display-flex">
+      <a target="_blank" href="#" class="link">
         <div class="image-wrapper">
           <img class="image" src="./assets/images/left.png" alt="logo" />
         </div>
       </a>
-      <a href="#" class="link">
+      <button class="btn-reset">
         <img
           class="image"
           src="./assets/images/right.png"
           alt="burger button"
         />
-      </a>
+      </button>
     </header>
     <main>
       <section class="header-section">
-        <div class="bg-image-container">
+        <div class="bg-image-container display-flex flex-justify-center">
           <h1 class="text-heading overflow">Food app</h1>
           <h2 class="text-sub-heading multiline-overflow">
             Why stay hungry when you can order from Bella Onojie
@@ -36,18 +36,20 @@
           <h3 class="download-info-text multiline-overflow">
             Download the bella onojie's food app now on
           </h3>
-          <div class="buttons-container">
-            <a href="#">
-              <button class="btn-rounded main-btn overflow">Playstore</button>
+          <div class="buttons-container display-flex">
+            <a target="_blank" href="#">
+              <div class="btn-rounded main-btn overflow display-inblock">
+                Playstore
+              </div>
             </a>
-            <a href="#">
-              <button class="btn-rounded secondary-btn overflow">
+            <a target="_blank" href="#">
+              <div class="btn-rounded secondary-btn overflow display-inblock">
                 App store
-              </button>
+              </div>
             </a>
           </div>
         </div>
-        <div class="phones-container">
+        <div class="phones-container display-flex flex-justify-center">
           <img class="img-phones" src="./assets/images/phones.png" alt="" />
         </div>
       </section>
@@ -64,7 +66,7 @@
               An account is created with your email and a desired password
             </h3>
           </div>
-          <div class="iaa-image-container">
+          <div class="iaa-image-container display-flex flex-justify-center">
             <img
               class="iaa-image"
               src="./assets/images/iaaloginphone.png"
@@ -72,17 +74,17 @@
             />
           </div>
         </div>
-        <div class="info-about-app shop">
+        <div class="info-about-app">
           <div class="iaa-account iaa-info-container">
             <h1 class="iaa-heading overflow ta-center">Explore varieties</h1>
             <h2 class="iaa-sub-heading multiline-overflow ta-center">
-              Shop for your favorites meal as e dey hot.
+              Shop for your favorites meal as e dey hot
             </h2>
             <h3 class="iaa-account-info multiline-overflow ta-center">
-              Shop for your favorite meals or drinks and enjoy while doing it.
+              Shop for your favorite meals or drinks and enjoy while doing it
             </h3>
           </div>
-          <div class="iaa-image-container">
+          <div class="iaa-image-container display-flex flex-justify-center">
             <img
               class="iaa-image"
               src="./assets/images/iaafoodmenu.png"
@@ -93,35 +95,35 @@
       </section>
       <section class="footer-section ta-center">
         <div class="fs-text">
-          <h1 class="fs-heading multiline-overflow">Download the app now.</h1>
+          <h1 class="fs-heading multiline-overflow">Download the app now</h1>
           <h2 class="fs-sub-heading multiline-overflow">
-            Most calendars are designed for teams.
+            Most calendars are designed for teams
           </h2>
         </div>
-        <div class="fs-buttons">
-          <a href="#">
-            <button class="fs-btn fs-main-btn overflow">Buy now</button></a
-          >
-          <a href="#">
-            <button class="fs-btn fs-secondary-btn overflow">
-              Try for free
-            </button></a
-          >
+        <div class="fs-buttons display-flex flex-justify-center">
+          <a target="_blank" href="#" class="link-reset">
+            <div class="fs-btn fs-main-btn overflow">Buy now</div>
+          </a>
+          <a target="_blank" href="#" class="link-reset">
+            <div class="fs-btn fs-secondary-btn overflow">Try for free</div>
+          </a>
         </div>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer display-flex">
       <div class="footer-logo-container">
-        <img src="/assets/images/left.png" alt="" />
+        <a target="_blank" href="#">
+          <img src="/assets/images/left.png" alt="" />
+        </a>
       </div>
       <div class="links">
-        <a href="#" class="img-link">
+        <a target="_blank" href="#" class="img-link">
           <img src="/assets/images/twitter.png" alt="twitter" />
         </a>
-        <a href="#" class="img-link">
+        <a target="_blank" href="#" class="img-link">
           <img src="/assets/images/facebook.png" alt="facebook" />
         </a>
-        <a href="#" class="img-link">
+        <a target="_blank" href="#" class="img-link">
           <img src="/assets/images/linkedin.png" alt="linkedin" />
         </a>
       </div>
