--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header class="page-header display-flex">
       <a target="_blank" href="#" class="link">
         <div class="image-wrapper">
-          <img class="image" src="./assets/images/left.png" alt="logo" />
+          <img
+            class="image"
+            src="./assets/images/left.png"
+            alt="company logo"
+          />
         </div>
       </a>
       <button class="btn-reset">
@@ -33,19 +37,23 @@
           </h3>
           <div class="buttons-container display-flex">
             <a target="_blank" href="#">
-              <div class="btn-rounded main-btn overflow display-inblock">
+              <span class="btn-rounded main-btn overflow display-inblock">
                 Playstore
-              </div>
+              </span>
             </a>
             <a target="_blank" href="#">
-              <div class="btn-rounded secondary-btn overflow display-inblock">
+              <span class="btn-rounded secondary-btn overflow display-inblock">
                 App store
-              </div>
+              </span>
             </a>
           </div>
         </div>
         <div class="phones-container display-flex flex-justify-center">
-          <img class="img-phones" src="./assets/images/phones.png" alt="" />
+          <img
+            class="img-phones"
+            src="./assets/images/phones.png"
+            alt="phones with app"
+          />
         </div>
       </section>
       <hr class="horizontal-break" />
@@ -65,7 +73,7 @@
             <img
               class="iaa-image"
               src="./assets/images/iaaloginphone.png"
-              alt=""
+              alt="phone with login app"
             />
           </div>
         </div>
@@ -83,7 +91,7 @@
             <img
               class="iaa-image"
               src="./assets/images/iaafoodmenu.png"
-              alt=""
+              alt="phone with app main page"
             />
           </div>
         </div>
@@ -108,7 +116,7 @@
     <footer class="page-footer display-flex">
       <div class="footer-logo-container">
         <a target="_blank" href="#">
-          <img src="/assets/images/left.png" alt="" />
+          <img src="/assets/images/left.png" alt="company logo" />
         </a>
       </div>
       <div class="links">
