--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   </head>
   <body>
     <header class="page-header display-flex">
-      <a target="_blank" href="#" class="link">
-        <div class="image-wrapper">
+      <a target="_blank" href="#" class="link image-wrapper">
           <img
             class="image"
             src="./assets/images/left.png"
             alt="company logo"
           />
-        </div>
       </a>
       <button class="btn-reset">
         <img
@@ -115,7 +113,7 @@
     </main>
     <footer class="page-footer display-flex">
       <div class="footer-logo-container">
-        <a target="_blank" href="#">
+        <a class="link" target="_blank" href="#">
           <img src="/assets/images/left.png" alt="company logo" />
         </a>
       </div>
